@@ -1,113 +1,42 @@
 package org.machinemc.nbt;
 
+import org.jetbrains.annotations.NotNull;
+import org.machinemc.nbt.exceptions.NBTException;
 import org.machinemc.nbt.visitor.NBTStringVisitor;
 import org.machinemc.nbt.visitor.NBTVisitor;
-import org.machinemc.nbt.exceptions.NBTException;
 
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.OutputStream;
 import java.util.*;
-import java.util.stream.Collectors;
 
-public final class NBTList implements NBTValue<List<NBT>>, NBT, List<NBT> {
+public class NBTList implements NBT<List<Object>>, List<NBT<?>> {
 
-    private final List<NBT> list;
+    private final List<NBT<?>> list;
     private Tag type = Tag.END;
 
-    public NBTList(NBTList list) {
-        this();
-        this.list.addAll(list.list);
-        this.type = list.type;
-    }
-
     public NBTList() {
-        this.list = new LinkedList<>();
+        this(Tag.END);
     }
 
-    public NBTList(Object... array) {
-        this();
-        for (final Object value : array) this.add(NBT.convert(value));
+    public NBTList(Tag type) {
+        this.list = new ArrayList<>();
+        this.type = type;
     }
 
-    public NBTList(InputStream stream) throws IOException {
-        this();
-        final Tag[] tags = Tag.values();
-        final Tag tag = tags[stream.read()];
-        final int length = NBTInt.decodeInt(stream);
-        if (tag == Tag.END || length < 1) return;
-        switch (tag) {
-            case BYTE -> {
-                for (int i = 0; i < length; i++) this.add(new NBTByte(stream));
-            }
-            case SHORT -> {
-                for (int i = 0; i < length; i++) this.add(new NBTShort(stream));
-            }
-            case INT -> {
-                for (int i = 0; i < length; i++) this.add(new NBTInt(stream));
-            }
-            case LONG -> {
-                for (int i = 0; i < length; i++) this.add(new NBTLong(stream));
-            }
-            case FLOAT -> {
-                for (int i = 0; i < length; i++) this.add(new NBTFloat(stream));
-            }
-            case DOUBLE -> {
-                for (int i = 0; i < length; i++) this.add(new NBTDouble(stream));
-            }
-            case BYTE_ARRAY -> {
-                for (int i = 0; i < length; i++) this.add(new NBTByteArray(stream));
-            }
-            case STRING -> {
-                for (int i = 0; i < length; i++) this.add(new NBTString(stream));
-            }
-            case LIST -> {
-                for (int i = 0; i < length; i++) this.add(new NBTList(stream));
-            }
-            case COMPOUND -> {
-                for (int i = 0; i < length; i++) this.add(new NBTCompound(stream));
-            }
-            case INT_ARRAY -> {
-                for (int i = 0; i < length; i++) this.add(new NBTIntArray(stream));
-            }
-            case LONG_ARRAY -> {
-                for (int i = 0; i < length; i++) this.add(new NBTLongArray(stream));
-            }
-            default -> throw new IOException("Unexpected value: " + tag);
-        }
+    public NBTList(Object... objects) {
+        this(List.of(objects));
     }
 
-    public NBTList(Object value) {
-        this();
-        if (value instanceof Collection<?> collection)
-            for (final Object thing : collection) this.add(NBT.convert(thing));
-        else if (value instanceof Object[] array)
-            for (final Object thing : array) this.add(NBT.convert(thing));
-        else this.add(NBT.convert(value));
-    }
-
-    public NBTList(NBT... items) {
-        this();
-        this.addAll(Arrays.asList(items));
+    public NBTList(NBT<?>... elements) {
+        this(List.of(elements));
     }
 
     public NBTList(Collection<?> collection) {
-        this();
-        for (final Object value : collection) this.add(NBT.convert(value));
+        this(collection.size());
+        for (Object element : collection)
+            addValue(element);
     }
 
-    private void tag(NBT nbt) {
-        if (type == Tag.END) this.type = nbt.tag();
-        else if (type != nbt.tag())
-            throw new NBTException("Lists may contain one type of value. This is marked for '" + type.name() + "'");
-    }
-
-    @Override
-    public void write(OutputStream stream) throws IOException {
-        if (type == Tag.END && list.size() > 0) this.tag(list.get(0));
-        stream.write(type.ordinal());
-        NBTInt.encodeInt(stream, list.size());
-        for (final NBT nbt : list) nbt.write(stream);
+    public NBTList(int initialCapacity) {
+        this.list = new ArrayList<>(initialCapacity);
     }
 
     @Override
@@ -116,11 +45,24 @@ public final class NBTList implements NBTValue<List<NBT>>, NBT, List<NBT> {
     }
 
     @Override
+    public List<Object> revert() {
+        List<Object> list = new ArrayList<>(size());
+        for (NBT<?> nbt : this)
+            list.add(NBT.revert(nbt));
+        return list;
+    }
+
+    @Override
     public void accept(NBTVisitor visitor) {
         visitor.visit(this);
     }
 
-    public Tag getType() {
+    @Override
+    public NBTList clone() {
+        return new NBTList(list);
+    }
+
+    public Tag getElementType() {
         return type;
     }
 
@@ -136,134 +78,145 @@ public final class NBTList implements NBTValue<List<NBT>>, NBT, List<NBT> {
 
     @Override
     public boolean contains(Object o) {
-        for (final NBT nbt : list) if (nbt.softEquals(o)) return true;
-        return false;
+        return list.contains(NBT.convert(o));
     }
 
     @Override
-    public Iterator<NBT> iterator() {
+    public @NotNull Iterator<NBT<?>> iterator() {
         return list.iterator();
     }
 
     @Override
-    public NBT[] toArray() {
+    public NBT<?> @NotNull [] toArray() {
         return list.toArray(new NBT[0]);
     }
 
     @Override
-    public <T> T[] toArray(T[] a) {
+    public <T> T @NotNull [] toArray(T @NotNull [] a) {
         return list.toArray(a);
     }
 
-    @Override
-    public boolean add(NBT nbt) {
-        this.tag(nbt);
-        return list.add(nbt);
+    public <T> T getValue(int index, T defaultValue) {
+        T value = getValue(index);
+        return value != null ? value : defaultValue;
+    }
+
+    @SuppressWarnings("unchecked")
+    public <T> T getValue(int index) {
+        return (T) NBT.revert(get(index));
+    }
+
+    @SuppressWarnings("unchecked")
+    public <T extends NBT<?>> T get(int index, T defaultValue) {
+        T value = (T) get(index);
+        return value != null ? value : defaultValue;
     }
 
     @Override
-    public boolean remove(Object o) {
-        final boolean z = list.remove(o);
-        if (list.isEmpty()) type = Tag.END;
-        return z;
-    }
-
-    @Override
-    public boolean containsAll(Collection<?> c) {
-        return new HashSet<>(list).containsAll(c);
-    }
-
-    @Override
-    public boolean addAll(Collection<? extends NBT> c) {
-        return addAll(size(), c);
-    }
-
-    @Override
-    public boolean addAll(int index, Collection<? extends NBT> c) {
-        c.forEach(this::tag);
-        return list.addAll(index, c);
-    }
-
-    @Override
-    public boolean removeAll(Collection<?> c) {
-        return list.remove(c);
-    }
-
-    @Override
-    public boolean retainAll(Collection<?> c) {
-        return list.retainAll(c);
-    }
-
-    @Override
-    public void clear() {
-        this.list.clear();
-        this.type = Tag.END;
-    }
-
-    @Override
-    public NBT get(int index) {
+    public NBT<?> get(int index) {
         return list.get(index);
     }
 
-    @Override
-    public NBT set(int index, NBT element) {
-        this.tag(element);
-        return list.set(index, element);
+    public Object setValue(int index, Object element) {
+        return NBT.revert(set(index, NBT.convert(element)));
     }
 
     @Override
-    public void add(int index, NBT element) {
-        this.tag(element);
-        this.list.add(index, element);
+    public NBT<?> set(int index, NBT<?> element) {
+        return list.set(index, check(element));
+    }
+
+    public void addValue(int index, Object element) {
+        add(index, NBT.convert(element));
     }
 
     @Override
-    public NBT remove(int index) {
+    public void add(int index, NBT<?> element) {
+        list.add(index, check(element));
+    }
+
+    @Override
+    public NBT<?> remove(int index) {
         return list.remove(index);
     }
 
     @Override
     public int indexOf(Object o) {
-        return list.indexOf(o);
+        return list.indexOf(NBT.convert(o));
     }
 
     @Override
     public int lastIndexOf(Object o) {
-        return list.lastIndexOf(o);
+        return list.lastIndexOf(NBT.convert(o));
     }
 
     @Override
-    public ListIterator<NBT> listIterator() {
+    public @NotNull ListIterator<NBT<?>> listIterator() {
         return list.listIterator();
     }
 
     @Override
-    public ListIterator<NBT> listIterator(int index) {
+    public @NotNull ListIterator<NBT<?>> listIterator(int index) {
         return list.listIterator(index);
     }
 
     @Override
-    public List<NBT> subList(int fromIndex, int toIndex) {
+    public @NotNull List<NBT<?>> subList(int fromIndex, int toIndex) {
         return list.subList(fromIndex, toIndex);
     }
 
-    public boolean addValue(Object object) {
-        return this.add(NBT.convert(object));
-    }
-
-    public boolean contains(NBT nbt) {
-        return list.contains(nbt);
+    public boolean addValue(Object element) {
+        return add(NBT.convert(element));
     }
 
     @Override
-    public List<NBT> value() {
-        return Collections.unmodifiableList(new LinkedList<>(this));
+    public boolean add(NBT<?> nbt) {
+        return list.add(check(nbt));
     }
 
-    public List<?> revert() {
-        return list.stream()
-                .map(NBT::revert)
-                .collect(Collectors.toCollection(LinkedList::new));
+    @Override
+    public boolean remove(Object o) {
+        return list.remove(NBT.convert(o));
+    }
+
+    @Override
+    public boolean containsAll(@NotNull Collection<?> c) {
+        Collection<? extends NBT<?>> other = new NBTList(c).list;
+        return new HashSet<>(list).containsAll(other);
+    }
+
+    @Override
+    public boolean addAll(@NotNull Collection<? extends NBT<?>> c) {
+        int length = c.size();
+        if (length == 0) return false;
+        c.forEach(this::add);
+        return true;
+    }
+
+    @Override
+    public boolean addAll(int index, @NotNull Collection<? extends NBT<?>> c) {
+        int length = c.size();
+        if (length == 0) return false;
+        for (NBT<?> nbt : c) add(index++, nbt);
+        return true;
+    }
+
+    @Override
+    public boolean removeAll(@NotNull Collection<?> c) {
+        boolean modified = false;
+        for (Object element : c)
+            modified |= remove(element);
+        return modified;
+    }
+
+    @Override
+    public boolean retainAll(@NotNull Collection<?> c) {
+        return list.retainAll(c);
+    }
+
+    @Override
+    public void clear() {
+        list.clear();
     }
 
     @Override
@@ -272,15 +225,8 @@ public final class NBTList implements NBTValue<List<NBT>>, NBT, List<NBT> {
     }
 
     @Override
-    public boolean equals(Object o) {
-        if (this == o)
-            return true;
-        if (o == null || getClass() != o.getClass())
-            return false;
-
-        NBTList nbtList = (NBTList) o;
-
-        return list.equals(nbtList.list);
+    public boolean equals(Object obj) {
+        return obj == this || obj instanceof NBTList other && Objects.equals(list, other.list);
     }
 
     @Override
@@ -288,12 +234,17 @@ public final class NBTList implements NBTValue<List<NBT>>, NBT, List<NBT> {
         return list.hashCode();
     }
 
-    @Override
-    @SuppressWarnings("MethodDoesntCallSuperMethod")
-    public NBTList clone() {
-        List<NBT> clone = new LinkedList<>();
-        list.forEach(nbt -> clone.add(nbt.clone()));
-        return new NBTList(clone);
+    private NBT<?> check(NBT<?> nbt) {
+        if (nbt == null)
+            throw new NBTException("Lists may not contain null values");
+
+        if (type == Tag.END) {
+            type = nbt.tag();
+            return nbt;
+        }
+        if (type != nbt.tag())
+            throw new NBTException("Lists may contain one type of value. This is marked for '" + type.getTypeName() + "'");
+        return nbt;
     }
 
 }
